@@ -1,4 +1,7 @@
 --- CHANGELOG ---
+--- Assimulo-3.4.4 ---
+    * Changed "numpy.float" to equivalent "numpy.float64" due to DeprecationWarnings for numpy >= 1.20.
+
 --- Assimulo-3.4.3 ---
     * Improved compliance with newer scipy version by instead using corresponding numpy calls when more suitable.
 
